# edge-weight-recovery-huh

./: .gitignore  Cargo.toml  EXPERIMENTS.md  README.md  index.html
.github/workflows/: ci.yml
baselines/drncs_lg/: .gitignore  README.md  __init__.py  drncs_lg_adapter.py  drncs_lg_resumable.py  pyproject.toml  upstream.json
baselines/drncs_lg/tests/: __init__.py  test_adapter.py  test_resumable.py
baselines/drpk_static/: README.md  drpk_static_adapter.py  pyproject.toml  upstream.json
baselines/drpk_static/tests/: make_cli_fixture.py  test_adapter.py
baselines/neuromlr/: README.md  neuromlr_adapter.py  pyproject.toml  upstream.json
baselines/neuromlr/tests/: test_adapter.py
crates/ewr-cch/: Cargo.toml
crates/ewr-cli/: Cargo.toml
crates/ewr-core/: Cargo.toml
crates/ewr-io/: Cargo.toml
crates/ewr-io/src/: artifact.rs  config.rs  dataset.rs  lib.rs
docs/: architecture.md  repository_cleanup_inventory.md  research_status.md
examples/: analyze_divergence.rs  audit_coverage.rs  audit_loop_policies.rs  benchmark_customization.rs  evaluate_checkpoint.rs  generate_subsets.rs  generate_validation_blocks.rs  probe_turn_penalty.rs  train.json
experiments/: turn_residual_protocol.json
experiments/archive/: README.md
research/: Cargo.toml  README.md
research/archive/: EXPERIMENTS.md  README.md  compatibility-fixtures.json  decisions.md  legacy-rust.md
research/archive/experiments/archive/full_data_shared_temporal_residual/: README.md  report.md  time_audit.json
research/archive/experiments/archive/full_data_shared_temporal_residual/configs/: static_full_eta0004_u60.json  static_full_eta0008_u60.json  temporal_length_residual_eta1_u40.json  temporal_travel_time_full_eta0002_u500.json
research/archive/experiments/configs/: edge_transition_arcs_eta300_10pct_u50.json  original_edges_eta3000_10pct_u50.json  original_edges_eta300_10pct_u200.json  original_edges_eta300_10pct_u50.json
research/archive/experiments/fixed_point_cch_precision/: report.md  summary.json
research/archive/experiments/independent_time_buckets/configs/: static_evening_16_20_u500.json  static_late_20_24_u500.json
research/archive/experiments/line_graph_10pct_calibration/: report.md  summary.json
research/archive/experiments/neuromlr_cch_dijkstra_benchmarks/: README.md  commands.md  efficiency_protocol_amendment.json  protocol.json  report.md  test_access_receipt.json  test_audit.json  test_unlock.json  thread_scaling_audit.json  train_audit.json  upstream.json  upstream_adaptations.md  validation_audit.json  validation_evidence.json
research/archive/experiments/neuromlr_cch_dijkstra_benchmarks/configs/: project_thread_scaling_8_u10.json
research/archive/experiments/neuromlr_cch_dijkstra_benchmarks/environment/: hardware.json
research/archive/experiments/optimizer_recovery/: report.md
research/archive/experiments/optimizer_recovery/configs/: edge_transition_arcs_relative_10pct_u299.json
research/archive/scripts/: compare_oracle_predictions.py  select_edge_to_edge_checkpoint.py  select_neuromlr_greedy_checkpoint.py  select_route_checkpoint.py  summarize_calibration.py  summarize_independent_time_buckets.py  summarize_optimizer_recovery.py  summarize_oracle_benchmarks.py
research/crates/ewr-research-dijkstra/: Cargo.toml
research/crates/ewr-research-dijkstra/src/: lib.rs
research/crates/ewr-research-evaluator/: Cargo.toml
research/crates/ewr-research-evaluator/src/: lib.rs  main.rs
research/crates/ewr-research-project-experiment/: Cargo.toml
research/crates/ewr-research-project-experiment/src/: lib.rs  main.rs
research/crates/ewr-research-protocol/: Cargo.toml
research/crates/ewr-research-protocol/src/: lib.rs
research/crates/ewr-research-static-baselines/: Cargo.toml  README.md
research/crates/ewr-research-static-baselines/src/: lib.rs  main.rs
research/experiments/route_baselines_full_test_20260719/: README.md  RESULTS.md  pipeline.json  protocol.json  summary-input.json
research/scripts/: check_route_baseline_cuda.py  export_full_test_dataset.py  export_protocol_dataset.py  route_baseline_pipeline.sh  route_quality_confidence.py  run_route_baseline_pipeline.py  run_sharded_route_predictions.py  select_project_checkpoint.py  summarize_full_prediction_operational.py  summarize_route_baselines.py  verify_route_prediction_smoke_gate.py  write_full_test_route_report.py
research/scripts/tests/: test_export_full_test_dataset.py  test_export_protocol_dataset.py  test_full_test_route_baseline_pipeline_config.py  test_route_quality_confidence.py  test_run_route_baseline_pipeline.py  test_run_sharded_route_predictions.py  test_select_project_checkpoint.py  test_summarize_full_prediction_operational.py  test_summarize_route_baselines.py  test_verify_route_prediction_smoke_gate.py  test_write_full_test_route_report.py
scripts/: analyze_confirmation.py  analyze_convergence.py  analyze_scale_results.py  create_test_unlock.py  generate_scale_subsets.py  neuromlr_fair.py  run_bucketed_static_experiment.py  run_experiment_matrix.py  run_temporal_experiment.py  select_route_checkpoint.py  summarize_full_time_experiment.py  summarize_results.py
src/: benchmark_data.rs  checkpoint.rs  config.rs  data.rs  divergence.rs  evaluation.rs  expanded_training.rs  graph.rs  graph_problem.rs  lib.rs  main.rs  objective.rs  optimizer.rs  temporal.rs  temporal_training.rs  time_buckets.rs  training.rs  turn.rs  turn_graph.rs  turn_training.rs  utils.rs
src/model/: mod.rs  (+3 more)
tests/: beijing_r0_correctness.rs  contracts.rs  expanded_model_correctness.rs  test_neuromlr_fair.py  turn_residual_correctness.rs
tools/: generate_subsets.rs  import_frozen_edge_checkpoint.rs
(+152 files in other folders)
