[package]
name = "edge-weight-recovery"
version = "0.1.0"
edition = "2024"

[dependencies]
routingkit-cch = "0.1.3"
serde-pickle = "1.2.0"
rayon = "1"
serde_json = { version = "1", features = ["float_roundtrip"] }
rand = "0.8"
sha2 = "0.10"

[[bin]]
name = "generate-subsets"
path = "tools/generate_subsets.rs"

[[bin]]
name = "import-frozen-edge-checkpoint"
path = "tools/import_frozen_edge_checkpoint.rs"
