[workspace]
resolver = "3"
members = [
    "crates/ewr-core",
    "crates/ewr-cch",
    "crates/ewr-io",
    "crates/ewr-cli",
]
default-members = [
    "crates/ewr-core",
    "crates/ewr-cch",
    "crates/ewr-io",
    "crates/ewr-cli",
]
exclude = ["research"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
