[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-drpk-static"
version = "0.3.0"
description = "Clean-room, time-collapsed DRPK protocol adapter"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "gensim==4.4.0",
  "numpy==2.2.6",
  "pyshp==2.3.1",
  "scipy==1.15.3",
  "torch==2.7.1",
]

[project.optional-dependencies]
test = ["pytest==8.4.1"]

[project.scripts]
ewr-drpk-static = "drpk_static_adapter:main"

[tool.setuptools]
py-modules = ["drpk_static_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"
